# GD32-FOC

gd32Project/: CMakeLists.txt
gd32Project/Firmware/GD32E50x_standard_peripheral/Include/: gd32e50x_adc.h  gd32e50x_bkp.h  gd32e50x_can.h  gd32e50x_cmp.h  gd32e50x_crc.h  gd32e50x_ctc.h  gd32e50x_dac.h  gd32e50x_dbg.h  gd32e50x_dma.h  gd32e50x_enet.h  gd32e50x_exmc.h  gd32e50x_exti.h  gd32e50x_fmc.h  gd32e50x_fwdgt.h  gd32e50x_gpio.h  gd32e50x_i2c.h  gd32e50x_misc.h  gd32e50x_pmu.h  gd32e50x_rcu.h  gd32e50x_rtc.h  gd32e50x_sdio.h  gd32e50x_shrtimer.h  gd32e50x_spi.h  gd32e50x_sqpi.h  gd32e50x_timer.h  gd32e50x_tmu.h  gd32e50x_usart.h  gd32e50x_wwdgt.h
gd32Project/Firmware/GD32E50x_standard_peripheral/Source/: gd32e50x_adc.c  gd32e50x_bkp.c  gd32e50x_can.c  gd32e50x_cmp.c  (+24 more)
gd32Project/gd32Foc/: gd32Foc.uvguix.15471  gd32Foc.uvoptx  gd32Foc.uvprojx
gd32Project/gd32Foc/BSP/: gd32e50x_it.c  gd32e50x_it.h  gd32e50x_libopt.h  systick.c  systick.h
gd32Project/gd32Foc/Listings/: gd32Foc.map
gd32Project/gd32Foc/Objects/: encoder_spi.d  foc_adc.d  foc_tim_pwm.d  foc_usart.d  focalgorithm.d  gd32Foc.axf  gd32Foc.build_log.htm  gd32Foc.htm  gd32Foc.lnp  gd32Foc_Target 1.dep  gd32e50x_adc.d  gd32e50x_dma.d  gd32e50x_gpio.d  gd32e50x_it.d  gd32e50x_misc.d  gd32e50x_rcu.d  gd32e50x_spi.d  gd32e50x_timer.d  gd32e50x_usart.d  main.d  pwm_out.d  system_gd32e50x.d  systick.d
gd32Project/gd32Foc/USER/: encoder_spi.c  encoder_spi.h  focAlgorithm.c  focAlgorithm.h  foc_ADC.c  foc_ADC.h  foc_tim_pwm.c  foc_tim_pwm.h  foc_usart.c  foc_usart.h  main.c  main.h  motor_config.h
(+122 files in other folders)
